package baseNoStates.DoorStates;

public class State {
  public static final String UNLOCKED = "Unlocked";
  public static final String LOCKED = "Locked";
  public static final String PROPPED = "Propped";
}
