@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Webserver {
}

class SocketThread {

}
package "java\util" {
    interface Observer {
    }
    abstract class Observable {
    }
    Observable -> "*" Observer : observers

}

class Clock extends java\util.Observable {
}


class Main {
}


Main -[hidden]down- Webserver

package "UserGroups" {

    class DirectoryUserGroups {
    }

    abstract class UserGroup {
    }

    class User {
    }

    class UserGroupAdministrator extends UserGroup{

    }
    class UserGroupBlank extends UserGroup{

    }
    class UserGroupEmployee extends UserGroup{

    }
    class UserGroupManager extends UserGroup{

    }
    class UserGroupSystem extends UserGroup{

    }
    class schedule {
    }
}

DirectoryUserGroups  -->  UserGroup : userGroups
UserGroup  -->  User : users
UserGroup --> Schedule : schedule


package "Partitions" {

    abstract class Area {
    }

    class Space {
    }

    class Partition {

    }

    class DirectoryAreas {
    }
}

Area "1" <-- DirectoryAreas : "rootArea"
Area <|-- Partition
Area <|-- Space
Area <|-- Door
Partition *--> "1" Area : "children"
Door  <--  Space : doors
Door  <--  DirectoryAreas : allDoors

package requests {
    interface Request {
    }

    class RequestRefresh implements Request {
    }

    class RequestReader implements Request {
    }

    class RequestArea implements Request {
    }
}

class Door {
}

package "DoorStates" {
    abstract class DoorState {
    }

    class States {
    }

    class Actions {
    }

    class Unlocked {
    }

    class Locked {
    }

    class UnlockedShortly implements java\util.Observer {
    }


}
DoorState <|-- Unlocked
DoorState <|-- UnlockedShortly
DoorState <|-- Locked

DoorState <-- Door : state



@enduml